Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8501

qmake can't process project file(.pro) with UTF-8 BOM

    XMLWordPrintable

Details

    • 2f9574582d800b43d9593b3587f6a35d6bbd8749

    Description

      When use MSVC compiler, If you want to compile source files with UTF-8 encoding, BOM is require. So you need to set the Text Editor behavior to add UTF-8 BOM, but qmake can't process project file(.pro) with UTF-8 BOM. It get error like this:
      Unexpected UTF-8 BOM in E:/QTPro/myapp.pro
      Error processing project file: E:/QTPro/myapp.pro
      11:17:14: The process "D:\Qt\Qt5.0.0\5.0.0\msvc2010\bin\qmake.exe" exited with code 3.
      Error while building/deploying project myapp(kit: Desktop Qt 5.0.0 MSVC2010 32bit (SDK))
      When executing step 'qmake'

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            davschul David Schulz
            lding liu ding
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes