src/plugins/texteditor/basetexteditor.cpp
@@ -6238,7 +6238,7 @@ void BaseTextEditorWidget::appendStandardContextMenuActions(QMenu *menu)
         menu->addAction(a);
 
     QSharedPointer<BaseTextDocument> doc = baseTextDocument();
-    if (doc->codec()->name() == QByteArray("UTF-8")) {
+    if (doc->codec()->name() == QByteArray("UTF-8") && doc->supportsUtf8Bom()) {
         a = Core::ActionManager::command(Constants::SWITCH_UTF8BOM)->action();
         if (a && a->isEnabled()) {
             a->setText(doc->format().hasUtf8Bom ? tr("Delete UTF-8 BOM on Save")
